[package]
name = "aprender-shell"
version = "0.1.0"
edition = "2021"
authors = ["paiml"]
description = "AI-powered shell completion trained on your history"
license = "MIT"
repository = "https://github.com/paiml/aprender"
keywords = ["shell", "zsh", "completion", "ai", "autocomplete"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[lib]
name = "aprender_shell"
path = "src/lib.rs"

[[bin]]
name = "aprender-shell"
path = "src/main.rs"

[[bench]]
name = "shell_benchmarks"
harness = false

[[bench]]
name = "recommendation_latency"
harness = false

[dependencies]
aprender = "0.10.0"
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
criterion = "0.5"
predicates = "3"
tempfile = "3"
