[package]
name = "aprender-shell"
version = "0.2.1"
edition = "2021"
authors = ["paiml"]
description = "AI-powered shell completion trained on your history"
license = "MIT"
repository = "https://github.com/paiml/aprender"
keywords = ["shell", "zsh", "completion", "ai", "autocomplete"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[lib]
name = "aprender_shell"
path = "src/lib.rs"

[[bin]]
name = "aprender-shell"
path = "src/main.rs"

[[bench]]
name = "shell_benchmarks"
harness = false

[[bench]]
name = "recommendation_latency"
harness = false

[dependencies]
# Use crates.io version for release
aprender = { version = "0.14", features = ["format-encryption", "format-compression", "format-homomorphic"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# For password input without echo
rpassword = "7"

[features]
default = ["format-compression", "format-encryption"]
format-compression = []
format-encryption = []

[dev-dependencies]
assert_cmd = "2"
criterion = "0.5"
predicates = "3"
proptest = "1"
tempfile = "3"
# Note: Chaos testing uses renacer CLI tool (not library)
# Install with: cargo install --path ../renacer
