[package]
name = "aprender-shell"
version = "0.1.0"
edition = "2021"
authors = ["paiml"]
description = "AI-powered shell completion trained on your history"
license = "MIT"
repository = "https://github.com/paiml/aprender"
keywords = ["shell", "zsh", "completion", "ai", "autocomplete"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "aprender-shell"
path = "src/main.rs"

[dependencies]
aprender = { path = "../.." }
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
